--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--div que engloba tudo-->
     <div class="instagram-conteiner">
         <div class="instagram-phone">
-            <img src="./img/instagram-celular.png" alt="celular">
+            <img src="img/phone.png" alt="celular">
         </div>
     <!--div login-->
         <div class="instagram-login">
